--- a/src/index.css
+++ b/src/index.css
@@ -44,3 +44,17 @@ code {
     color: #ee6352;
     padding: 10px 15px;
 }
+
+@media screen and (min-width:500px) and (max-width:575px) {
+    .titlePage {
+        font-size: 40px !important;
+        width: 100% !important;
+        font-weight: 900 !important;
+        font-family: ubuntu;
+        text-align: center;
+    }
+    .subtitle {
+        font-size: 30px !important;
+        text-align: center;
+    }
+}
