change footer text

--- a/src/index.css
+++ b/src/index.css
@@ -45,7 +45,22 @@ code {
     padding: 10px 15px;
 }
 
-@media screen and (min-width:500px) and (max-width:575px) {
+
+/* @media screen and (min-width:500px) and (max-width:575px) {
+    .titlePage {
+        font-size: 40px !important;
+        width: 100% !important;
+        font-weight: 900 !important;
+        font-family: ubuntu;
+        text-align: center;
+    }
+    .subtitle {
+        font-size: 30px !important;
+        text-align: center;
+    }
+} */
+
+@media only screen and (device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) {
     .titlePage {
         font-size: 40px !important;
         width: 100% !important;
@@ -59,7 +74,7 @@ code {
     }
 }
 
-@media only screen and (device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) {
+@media screen and (min-width: 300px) and (max-width: 575px) {
     .titlePage {
         font-size: 40px !important;
         width: 100% !important;
@@ -86,4 +101,5 @@ code {
 .Hero__title {
     display: flex;
     justify-content: center;
+    flex-direction: column;
 }
